--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -4,8 +4,13 @@
 
  spring:
   application:
-    name: user-service
-    
+    name: user-service 
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+      
  server:
    port: 8101
  
